--- a/FitnessTracker.V1/Layout/MainLayout.razor
+++ b/FitnessTracker.V1/Layout/MainLayout.razor
@@ -8,9 +8,9 @@
 
     <main>
         <!-- ✅s Barre du haut -->
-        <div class="top-row px-4 d-flex justify-content-between align-items-center bg-dark text-white">
+        @* <div class="top-row px-4 d-flex justify-content-between align-items-center bg-dark text-white">
             <div>
-                <h5 class="m-0">FitnessTracker</h5>
+                <h5 class="m-0">salut</h5>
             </div>
 
             <div>
@@ -23,7 +23,7 @@
                     <a href="/login" class="btn btn-outline-light btn-sm">🔐 Connexion</a>
                 }
             </div>
-        </div>
+        </div> *@
 
         <article class="content px-4">
             @Body
